--- a/member-gift-detail.html
+++ b/member-gift-detail.html
@@ -173,7 +173,7 @@
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="index.html">首頁</a></li>
                     <li class="breadcrumb-item d-lg-inline-block d-none"><a href="member-point.html">會員中心</a></li>
-                    <li class="breadcrumb-item active" aria-current="page">商品推薦</li>
+                    <li class="breadcrumb-item active" aria-current="page">好禮兌換</li>
                 </ol>
             </nav>
         </div>
@@ -189,141 +189,84 @@
                     <a class="nav-link" href="member-change-record.html">兌換紀錄</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="member-recommend.html">商品推薦</a>
+                    <a class="nav-link" href="member-recommend.html">商品推薦</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="member-data.html">會員資料維護</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="member-gift-list.html">好禮兌換</a>
+                    <a class="nav-link active" href="member-gift-list.html">好禮兌換</a>
                 </li>
             </ul>
         </div>
         <div class="container py-4 py-lg-9">
-            <div class="row justify-content-center">
-                <div class="col-12 col-lg-6">
-                    <div class="row text-sm">
-                        <div class="col-4 text-center">
-                            <img class="img-fluid" src="assets/img/ui/skin-all.png" alt="">
-                            <div class="mt-2">混合性肌膚</div>
-                        </div>
-                        <div class="col-8">
-                            <div class="mb-4">
-                                <div class="text-ci-dark font-weight-bold">
-                                    資優級會員 王小喬
-                                </div>
+            <div class="row">
+                <div class="col-12 mb-6">
+                    <div class="row">
+                        <div class="col-lg-2 d-lg-flex d-none"></div>
+                        <div class="col-12 col-lg-8 order-2 order-lg-1"></div>
+                        <div class="col-12 col-lg-2 text-right order-1 order-lg-2 mb-2 mb-lg-0">
+                            <div class="d-inline position-relative mr-3">
+                                <i class="icon-bag"></i>
+                                <span class="bag-count">99</span>
                             </div>
-                            <div class="mb-4">
-                                <div class="d-block d-lg-inline mr-3">
-                                    <div class="text-ci-dark font-weight-bold">
-                                        敏感問題
-                                    </div>
-                                </div>
-                                <div class="d-block d-lg-inline">極輕度 異位性敏感</div>
-                            </div>
-                            <div class="d-lg-block d-none">
-                                <span class="text-ci-dark font-weight-bold mr-3">
-                                    肌膚問題
-                                </span>
-                                <div class="row no-gutters text-center mt-2">
-                                    <div class="col-3">
-                                        <img class="img-fluid" src="assets/img/ui/skin-1.png" srcset="assets/img/ui/skin-1@2x.png 2x" alt="敏感肌膚">
-                                        <div>敏感肌膚</div>
-                                    </div>
-                                    <div class="col-3">
-                                        <img class="img-fluid" src="assets/img/ui/skin-4.png" srcset="assets/img/ui/skin-4@2x.png 2x" alt="毛孔出油">
-                                        <div>毛孔出油</div>
-                                    </div>
-                                    <div class="col-3">
-                                        <img class="img-fluid" src="assets/img/ui/skin-3.png" srcset="assets/img/ui/skin-3@2x.png 2x" alt="痘痘&amp;粉刺">
-                                        <div>痘痘&amp;粉刺</div>
-                                    </div>
-                                    <div class="col-3">
-                                        <img class="img-fluid" src="assets/img/ui/skin-2.png" srcset="assets/img/ui/skin-2@2x.png 2x" alt="斑點膚色不均">
-                                        <div>斑點膚色不均</div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-12 d-lg-none">
-                            <div class="text-center">
-                                <span class="text-ci-dark font-weight-bold mr-3">
-                                    肌膚問題
-                                </span>
-                                <div class="row text-center mt-2">
-                                    <div class="col-3 px-2">
-                                        <img class="img-fluid" src="assets/img/ui/skin-1.png" srcset="assets/img/ui/skin-1@2x.png 2x" alt="敏感肌膚">
-                                        <div>敏感肌膚</div>
-                                    </div>
-                                    <div class="col-3 px-2">
-                                        <img class="img-fluid" src="assets/img/ui/skin-4.png" srcset="assets/img/ui/skin-4@2x.png 2x" alt="毛孔出油">
-                                        <div>毛孔出油</div>
-                                    </div>
-                                    <div class="col-3 px-2">
-                                        <img class="img-fluid" src="assets/img/ui/skin-3.png" srcset="assets/img/ui/skin-3@2x.png 2x" alt="痘痘&amp;粉刺">
-                                        <div>痘痘&amp;粉刺</div>
-                                    </div>
-                                    <div class="col-3 px-2">
-                                        <img class="img-fluid" src="assets/img/ui/skin-2.png" srcset="assets/img/ui/skin-2@2x.png 2x" alt="斑點膚色不均">
-                                        <div>斑點膚色不均</div>
-                                    </div>
-                                </div>
-                            </div>
+                            <a class="btn btn-primary rounded py-1" href="#">兌換清單</a>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="container-fluid bg-light">
-            <div class="container py-4 py-lg-9">
-                <div class="row">
-                    <div class="col-12">
-                        <div class="mb-6">
-                            <div class="h2 text-ci-dark text-center">商品推薦</div>
+            <div class="row justify-content-center">
+                <div class="col-12 col-lg-5 my-2">
+                    <img class="img-fluid" src="assets/img/uploads/product2-detailjpg.jpg" alt="">
+                </div>
+                <div class="col-12 col-lg-6 my-2">
+                    <div class="title-success">
+                        <div>SEBIUM平衡系列</div>
+                        <div class="h2 mt-2">平衡控油潔膚液(250ml)</div>
+                    </div>
+                    <p class="my-2">日常清潔<br>高效控油 清爽水潤</p>
+                    <p class="text-primary my-2">
+                        <span class="h3">30</span><span class="h5">點</span>
+                    </p>
+                    <div class="row my-4">
+                        <div class="col-12 col-lg-3">
+                            【高效清潔】
                         </div>
-                        <div class="row px-0 px-lg-18">
-                            <div class="col-12 col-lg-6 col-recommend my-1">
-                                <div class="row py-4">
-                                    <div class="col-4 col-lg-5">
-                                        <img class="img-fluid" src="assets/img/uploads/product1-thumb.jpg" alt="">
-                                    </div>
-                                    <div class="col-8 col-lg-7">
-                                        <div class="title-success mb-4">
-                                            SEBIUM平衡系列
-                                            <div class="lead mt-2">平衡控油精華露(200ml)</div>
-                                        </div>
-                                        <p>日常保養<br>調理肌膚 清爽控油 緊緻毛孔</p>
-                                        <p>
-                                            <span class="h4 text-primary font-weight-normal">NT$690</span>
-                                            <span class="text-sm">紅利點數3點</span>
-                                        </p>
-                                        <div class="text-right">
-                                            <a class="btn btn-primary py-0" href="member-gift-detail.html">了解更多</a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-12 col-lg-6 col-recommend my-1">
-                                <div class="row py-4">
-                                    <div class="col-4 col-lg-5">
-                                        <img class="img-fluid" src="assets/img/uploads/product2-thumb.jpg" alt="">
-                                    </div>
-                                    <div class="col-8 col-lg-7">
-                                        <div class="title-success mb-4">
-                                            SEBIUM平衡系列
-                                            <div class="lead mt-2">平衡控油精華露(200ml)</div>
-                                        </div>
-                                        <p>加強修護<br>高效控油 去除老廢角質</p>
-                                        <p>
-                                            <span class="h4 text-primary font-weight-normal">NT$690</span>
-                                            <span class="text-sm">紅利點數3點</span>
-                                        </p>
-                                        <div class="text-right">
-                                            <a class="btn btn-primary py-0" href="member-gift-detail.html">了解更多</a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+                        <div class="col-12 col-lg-9 mb-2">
+                            獨特Micelle Technology膠束科技，兩性特殊結構親油及親水分子，清潔臉部彩妝與髒汙，使清潔後的肌膚清爽潔淨。
+                        </div>
+                        <div class="w-100"></div>
+                        <div class="col-12 col-lg-3">
+                            【修護保護膜】
+                        </div>
+                        <div class="col-12 col-lg-9 mb-2">
+                            獨特兩性結構，有效清潔油脂、髒污及彩妝，同時保護肌膚。
+                        </div>
+                        <div class="w-100"></div>
+                        <div class="col-12 col-lg-3">
+                            【清爽控油】
+                        </div>
+                        <div class="col-12 col-lg-9 mb-2">
+                            添加葡萄糖酸鋅調理肌膚，避免毛孔阻塞，達到油水平衡的功效。
+                        </div>
+                    </div>
+                    <div class="form-group row my-4">
+                        <label for="inputCount" class="col-2 col-form-label">數量</label>
+                        <div class="col-4 col-lg-2">
+                            <select class="custom-select">
+                                <option selected>10</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-6 pr-1">
+                            <a class="btn btn-block btn-primary" href="member-gift-order.html">加入兌換清單</a>
+                            <a class="btn btn-block btn-secondary disabled" href="javascript:void();">加入兌換清單</a>
+                        </div>
+                        <div class="col-6 pl-1">
+                            <a class="btn btn-block btn-outline-primary" href="#">
+                                詳細介紹 <i class="fas fa-external-link-alt"></i>
+                            </a>
                         </div>
                     </div>
                 </div>
