--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-2 col-lg-4 text-right">
+                <div class="col-2 col-lg-4 text-right top-nav">
                     <div class="d-lg-none">
                         <a class="h3 menu-btn" href="javascript:void();">
                             <i class="fas fa-bars text-primary"></i>
@@ -186,6 +186,16 @@
         <div class="container py-4">
             <div class="row justify-content-center">
                 <div class="col-12 col-lg-4 my-1 my-lg-0">
+                    <div class="row bg-primary mx-0 py-3 h-100">
+                        <div class="col-4">
+                            <img class="img-fluid" src="assets/img/ui/icon-features-birthday.png" srcset="assets/img/ui/icon-features-birthday@2x.png 2x" alt="">
+                        </div>
+                        <div class="col-8 text-white">
+                            <div class="h4 my-2">生日禮遇</div>
+                            <div>生日當月購物<br>產品點數加倍回饋</div>
+                        </div>
+                    </div>
+<!--
                     <div class="bg-primary media p-3 p-lg-6 h-100">
                         <img class="mr-3" src="assets/img/ui/icon-features-birthday.png" srcset="assets/img/ui/icon-features-birthday@2x.png 2x" alt="">
                         <div class="media-body text-white">
@@ -193,8 +203,23 @@
                             <div>生日當月購物<br>產品點數加倍回饋</div>
                         </div>
                     </div>
+-->
                 </div>
                 <div class="col-12 col-lg-4 my-1 my-lg-0">
+                    <div class="row bg-primary mx-0 py-3 h-100">
+                        <div class="col-4">
+                            <img class="img-fluid" src="assets/img/ui/icon-features-gift.png" srcset="assets/img/ui/icon-features-gift@2x.png 2x" alt="">
+                        </div>
+                        <div class="col-8 text-white">
+                            <div class="h4 my-2">貼心回饋</div>
+                            <div>
+                                1.註冊送2點<br>
+                                2.首登禮加送2點&amp;專屬體驗禮<br>
+                                3.資優/專家會員免費試用領取
+                            </div>
+                        </div>
+                    </div>
+<!--
                     <div class="bg-primary media p-3 p-lg-6 h-100">
                         <img class="mr-3" src="assets/img/ui/icon-features-gift.png" srcset="assets/img/ui/icon-features-gift@2x.png 2x" alt="">
                         <div class="media-body text-white">
@@ -206,8 +231,22 @@
                             </div>
                         </div>
                     </div>
+-->
                 </div>
                 <div class="col-12 col-lg-4 my-1 my-lg-0">
+                    <div class="row bg-primary mx-0 py-3 h-100">
+                        <div class="col-4">
+                            <img class="img-fluid" src="assets/img/ui/icon-features-diamond.png" srcset="assets/img/ui/icon-features-diamond@2x.png 2x" alt="">
+                        </div>
+                        <div class="col-8 text-white">
+                            <div class="h4 my-2">購物賺點獎勵</div>
+                            <div>
+                                購買產品$200元=1點<br>
+                                累積點數免費兌換明星商品
+                            </div>
+                        </div>
+                    </div>
+<!--
                     <div class="bg-primary media p-3 p-lg-6 h-100">
                         <img class="mr-3" src="assets/img/ui/icon-features-diamond.png" srcset="assets/img/ui/icon-features-diamond@2x.png 2x" alt="">
                         <div class="media-body text-white">
@@ -218,6 +257,7 @@
                             </div>
                         </div>
                     </div>
+-->
                 </div>
             </div>
         </div>
