--- a/member-gift-detail.html
+++ b/member-gift-detail.html
@@ -142,7 +142,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-2 col-lg-4 text-right">
+                <div class="col-2 col-lg-4 text-right top-nav">
                     <div class="d-lg-none">
                         <a class="h3 menu-btn" href="javascript:void();">
                             <i class="fas fa-bars text-primary"></i>
