--- a/benefits.html
+++ b/benefits.html
@@ -188,7 +188,7 @@
                 </ol>
             </nav>
         </div>
-        <div class="container py-4 py-lg-9">
+        <div class="container pb-4 pb-lg-9">
             <div class="row justify-content-center">
                 <div class="col-12 mb-6">
                     <div class="h2 text-ci-dark text-center">會員權益</div>
@@ -201,13 +201,13 @@
                                     <i class="icon-member-lv1"></i> 學院級會員
                                 </div>
                             </div>
-                            <div class="td-lv text-center">
+                            <div class="td-lv px-lg-8 text-center">
                                 登錄註冊完成手機認證，立即成為貝膚黛瑪「學院級」會員
                             </div>
-                            <div class="td-lv text-center">
+                            <div class="td-lv px-lg-8 text-center">
                                 會籍 : 永久
                             </div>
-                            <div class="td-lv">
+                            <div class="td-lv px-lg-8 pb-4">
                                 <div class="media">
                                     <div class="rounded-circle mr-3">
                                         <img src="assets/img/ui/icon-benefits-star.png" srcset="assets/img/ui/icon-benefits-star@2x.png 2x" alt="">
@@ -240,13 +240,13 @@
                                     <i class="icon-member-lv2"></i> 資優級會員
                                 </div>
                             </div>
-                            <div class="td-lv text-center">
+                            <div class="td-lv px-lg-8 text-center">
                                 登錄任一產品，<br>即可升等成為貝膚黛瑪「資優級」會員
                             </div>
-                            <div class="td-lv text-center">
+                            <div class="td-lv px-lg-8 text-center">
                                 會籍 : 一年
                             </div>
-                            <div class="td-lv">
+                            <div class="td-lv px-lg-8 pb-4">
                                 <div class="media">
                                     <div class="rounded-circle mr-3">
                                         <img src="assets/img/ui/icon-benefits-star.png" srcset="assets/img/ui/icon-benefits-star@2x.png 2x" alt="">
@@ -315,14 +315,14 @@
                                     <i class="icon-member-lv3"></i> 專家級會員
                                 </div>
                             </div>
-                            <div class="td-lv text-center">
+                            <div class="td-lv px-lg-8 text-center">
                                 資優級會員在一年內累計<span class="text-primary">$6000</span>以上，<br>
                                 即可升等成為貝膚黛瑪「專家級」會員
                             </div>
-                            <div class="td-lv text-center">
+                            <div class="td-lv px-lg-8 text-center">
                                 會籍 : 一年
                             </div>
-                            <div class="td-lv">
+                            <div class="td-lv px-lg-8 pb-4">
                                 <div class="media">
                                     <div class="rounded-circle mr-3">
                                         <img src="assets/img/ui/icon-benefits-star.png" srcset="assets/img/ui/icon-benefits-star@2x.png 2x" alt="">
