--- a/login.html
+++ b/login.html
@@ -185,7 +185,7 @@
                     <form>
                         <div class="form-group">
 <!--                            <input type="tel" class="form-control bg-light" placeholder="手機號碼" value="" required>-->
-                            <input type="tel" class="form-control alert alert-danger m-0" placeholder="手機號碼" value="" required>
+                            <input type="tel" class="form-control is-invalid" placeholder="手機號碼" value="" required>
                             <div class="text-danger">
                                 帳號格式錯誤，請重新輸入
                             </div>
