--- a/module/common-footer.html
+++ b/module/common-footer.html
@@ -6,7 +6,7 @@
                     <div>BIODERMA &copy; 2019 All Rights Reserved.</div>
                 </div>
                 <div class="col-12 col-lg order-first order-lg-last">
-                    <ul class="nav justify-content-lg-end justify-content-center">
+                    <ul class="nav nav-social justify-content-lg-end justify-content-center">
                         <li class="nav-item">
                             <a class="nav-link text-white" href="#">
                                 <i class="fab fa-fw h2 fa-instagram"></i>
