--- a/preview.html
+++ b/preview.html
@@ -102,7 +102,7 @@
                 </tr>
                 <tr class="bg-light">
                     <td>A-3-4 忘記密碼</td>
-                    <td class="text-center"><a class="text-primary" href="pw-reset.html">連結</a></td>
+                    <td class="text-center"><a class="text-primary" href="pw-forgot.html">連結</a></td>
                     <td>Popup</td>
                     <td>OK</td>
                 </tr>
