--- a/regist-step1.html
+++ b/regist-step1.html
@@ -265,7 +265,7 @@
                                                 </select>
                                             </div>
                                         </div>
-                                        <input type="text" class="form-control" id="inputAddress" value="" required>
+                                        <input type="text" class="form-control" id="inputAddress" value="" placeholder="請輸入詳細地址" required>
                                     </div>
                                 </div>
                                 <div class="form-group row">
