--- a/member-gift-list.html
+++ b/member-gift-list.html
@@ -359,6 +359,94 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="col-6 col-lg-15 col-product my-2">
+                                <a class="d-block bg-white text-center" href="member-gift-detail.html">
+                                    <img class="img-fluid" src="assets/img/uploads/product2-thumb.jpg" alt="">
+                                    <div class="lead text-dark">
+                                        平衡控油潔膚液<br>(250ml)
+                                    </div>
+                                </a>
+                                <div class="row no-gutters">
+                                    <div class="col-6">
+                                        <div class="text-ci-dark">資優級</div>
+                                        <div class="text-primary">
+                                            <span class="h5">30</span>點
+                                        </div>
+                                    </div>
+                                    <div class="col-6">
+                                        <div class="text-ci-dark">資優級</div>
+                                        <div class="text-primary">
+                                            <span class="h5">20</span>點
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-6 col-lg-15 col-product my-2">
+                                <a class="d-block bg-white text-center" href="member-gift-detail.html">
+                                    <img class="img-fluid" src="assets/img/uploads/product3-thumb.jpg" alt="">
+                                    <div class="lead text-dark">
+                                        保濕水潤潔膚液<br>(250ml)
+                                    </div>
+                                </a>
+                                <div class="row no-gutters">
+                                    <div class="col-6">
+                                        <div class="text-ci-dark">資優級</div>
+                                        <div class="text-primary">
+                                            <span class="h5">30</span>點
+                                        </div>
+                                    </div>
+                                    <div class="col-6">
+                                        <div class="text-ci-dark">資優級</div>
+                                        <div class="text-primary">
+                                            <span class="h5">20</span>點
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-6 col-lg-15 col-product my-2">
+                                <a class="d-block bg-white text-center" href="member-gift-detail.html">
+                                    <img class="img-fluid" src="assets/img/uploads/product4-thumb.jpg" alt="">
+                                    <div class="lead text-dark">
+                                        滋潤全日保濕乳<br>(200ml)
+                                    </div>
+                                </a>
+                                <div class="row no-gutters">
+                                    <div class="col-6">
+                                        <div class="text-ci-dark">資優級</div>
+                                        <div class="text-primary">
+                                            <span class="h5">30</span>點
+                                        </div>
+                                    </div>
+                                    <div class="col-6">
+                                        <div class="text-ci-dark">資優級</div>
+                                        <div class="text-primary">
+                                            <span class="h5">20</span>點
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-6 col-lg-15 col-product my-2">
+                                <a class="d-block bg-white text-center" href="member-gift-detail.html">
+                                    <img class="img-fluid" src="assets/img/uploads/product5-thumb.jpg" alt="">
+                                    <div class="lead text-dark">
+                                        滋潤溫和潔膚露<br>(200ml)
+                                    </div>
+                                </a>
+                                <div class="row no-gutters">
+                                    <div class="col-6">
+                                        <div class="text-ci-dark">資優級</div>
+                                        <div class="text-primary">
+                                            <span class="h5">30</span>點
+                                        </div>
+                                    </div>
+                                    <div class="col-6">
+                                        <div class="text-ci-dark">資優級</div>
+                                        <div class="text-primary">
+                                            <span class="h5">20</span>點
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
 
