--- a/member-gift-order.html
+++ b/member-gift-order.html
@@ -250,7 +250,7 @@
                                     <div class="text-primary">25點</div>
                                 </td>
                                 <td class="text-center">
-                                    <a class="text-dark" href="#">
+                                    <a class="text-dark link-decoration" href="#">
                                         刪除 <i class="fas fa-times"></i>
                                     </a>
                                 </td>
@@ -287,7 +287,7 @@
                                     <div class="text-primary">25點</div>
                                 </td>
                                 <td class="text-center">
-                                    <a class="text-dark" href="#">
+                                    <a class="text-dark link-decoration" href="#">
                                         刪除 <i class="fas fa-times"></i>
                                     </a>
                                 </td>
@@ -333,12 +333,12 @@
                         <div class="font-weight-bold text-ci-dark">寄送資訊</div>
                     </div>
                     <div class="px-3 px-lg-6">
-                        <div class="row no-gutters">
-                            <div class="col-4 col-lg-auto">收件人姓名</div>
+                        <div class="row">
+                            <div class="col-4 col-lg-2">收件人姓名</div>
                             <div class="col-8 col-lg-10">張小姐</div>
-                            <div class="col-4 col-lg-auto">聯絡電話</div>
+                            <div class="col-4 col-lg-2">聯絡電話</div>
                             <div class="col-8 col-lg-10">0912345678</div>
-                            <div class="col-4 col-lg-auto">收件地址</div>
+                            <div class="col-4 col-lg-2">收件地址</div>
                             <div class="col-8 col-lg-10">臺北市大安區復興南路1段368號11樓</div>
                         </div>
                     </div>
