--- a/pw-new-step2.html
+++ b/pw-new-step2.html
@@ -197,8 +197,8 @@
                         已發送簡訊驗證碼至您的手機內，<br>
                         請在<span class="text-primary">15分鐘內</span>請完成驗證
                     </p>
-                    <p class="h1 text-ci-dark font-weight-normal">
-                        14:59:59
+                    <p class="text-ci-dark font-weight-normal">
+                        <span class="h1">14:59:59</span>
                     </p>
                 </div>
                 <div class="col-12 col-lg-4">
