--- a/regist-step1.html
+++ b/regist-step1.html
@@ -296,7 +296,7 @@
                     </div>
 
                     <div class="text-center">
-                        <a class="btn btn-primary px-20" href="regist-step2.html">儲存修改</a>
+                        <a class="btn btn-primary px-20" href="regist-step2.html">下一步</a>
                     </div>
                 </div>
             </div>
