--- a/preview.html
+++ b/preview.html
@@ -83,13 +83,13 @@
                     <td>OK</td>
                 </tr>
                 <tr class="bg-light">
-                    <td>A-3-1 忘記密碼</td>
+                    <td>A-3-1 設定新密碼</td>
                     <td class="text-center"><a class="text-primary" href="pw-new-step1.html">連結</a></td>
                     <td></td>
                     <td>OK</td>
                 </tr>
                 <tr class="bg-light">
-                    <td>A-3-2 忘記密碼 倒數</td>
+                    <td>A-3-2 設定新密碼 倒數</td>
                     <td class="text-center"><a class="text-primary" href="pw-new-step2.html">連結</a></td>
                     <td></td>
                     <td>OK</td>
