--- a/gift.html
+++ b/gift.html
@@ -188,7 +188,7 @@
                 </ol>
             </nav>
         </div>
-        <div class="container py-4 py-lg-9">
+        <div class="container pb-4 pb-lg-9">
             <div class="row justify-content-center">
                 <div class="col-12 mb-6">
                     <div class="h2 text-ci-dark text-center">會員兌換禮</div>
