--- a/member-point.html
+++ b/member-point.html
@@ -170,7 +170,7 @@
         </div>
         <div class="container">
             <nav>
-                <ol class="breadcrumb">
+                <ol class="breadcrumb mb-0 mb-lg-3">
                     <li class="breadcrumb-item"><a href="index.html">首頁</a></li>
                     <li class="breadcrumb-item d-lg-inline-block d-none"><a href="member-point.html">會員中心</a></li>
                     <li class="breadcrumb-item active" aria-current="page">立即積點</li>
@@ -178,30 +178,30 @@
             </nav>
         </div>
         <div class="container px-0 px-lg-3">
-            <ul class="nav nav-tabs nav-justified">
+            <ul class="nav nav-tabs nav-justified" id="nav-tabs">
                 <li class="nav-item">
-                    <a class="nav-link active" href="member-point.html">立即積點</a>
+                    <a class="nav-link active" href="member-point.html#nav-tabs">立即積點</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="member-point-record.html">積點紀錄</a>
+                    <a class="nav-link" href="member-point-record.html#nav-tabs">積點紀錄</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="member-change-record.html">兌換紀錄</a>
+                    <a class="nav-link" href="member-change-record.html#nav-tabs">兌換紀錄</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="member-recommend.html">商品推薦</a>
+                    <a class="nav-link" href="member-recommend.html#nav-tabs">商品推薦</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="member-data.html">會員資料維護</a>
+                    <a class="nav-link" href="member-data.html#nav-tabs">會員資料維護</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="member-gift-list.html">好禮兌換</a>
+                    <a class="nav-link" href="member-gift-list.html#nav-tabs">好禮兌換</a>
                 </li>
             </ul>
         </div>
         <div class="container py-4 py-lg-9">
             <div class="row">
-                <div class="col-12 mb-6">
+                <div class="col-12 my-4 mt-lg-0 mb-lg-6">
                     <div class="h2 text-ci-dark text-lg-left text-center">立即積點</div>
                 </div>
                 <div class="col-12 col-lg-6">
