--- a/member-recommend.html
+++ b/member-recommend.html
@@ -170,7 +170,7 @@
         </div>
         <div class="container">
             <nav>
-                <ol class="breadcrumb">
+                <ol class="breadcrumb mb-0 mb-lg-3">
                     <li class="breadcrumb-item"><a href="index.html">首頁</a></li>
                     <li class="breadcrumb-item d-lg-inline-block d-none"><a href="member-point.html">會員中心</a></li>
                     <li class="breadcrumb-item active" aria-current="page">商品推薦</li>
@@ -178,36 +178,36 @@
             </nav>
         </div>
         <div class="container px-0 px-lg-3">
-            <ul class="nav nav-tabs nav-justified">
+            <ul class="nav nav-tabs nav-justified" id="nav-tabs">
                 <li class="nav-item">
-                    <a class="nav-link" href="member-point.html">立即積點</a>
+                    <a class="nav-link" href="member-point.html#nav-tabs">立即積點</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="member-point-record.html">積點紀錄</a>
+                    <a class="nav-link" href="member-point-record.html#nav-tabs">積點紀錄</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="member-change-record.html">兌換紀錄</a>
+                    <a class="nav-link" href="member-change-record.html#nav-tabs">兌換紀錄</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="member-recommend.html">商品推薦</a>
+                    <a class="nav-link active" href="member-recommend.html#nav-tabs">商品推薦</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="member-data.html">會員資料維護</a>
+                    <a class="nav-link" href="member-data.html#nav-tabs">會員資料維護</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="member-gift-list.html">好禮兌換</a>
+                    <a class="nav-link" href="member-gift-list.html#nav-tabs">好禮兌換</a>
                 </li>
             </ul>
         </div>
         <div class="container py-4 py-lg-9">
             <div class="row justify-content-center">
                 <div class="col-12 col-lg-6">
-                    <div class="row text-sm">
-                        <div class="col-4 text-center">
+                    <div class="row text-sm align-items-center">
+                        <div class="col-6 col-lg-4 text-center">
                             <img class="img-fluid" src="assets/img/ui/skin-all.png" alt="">
                             <div class="mt-2">混合性肌膚</div>
                         </div>
-                        <div class="col-8">
+                        <div class="col-6 col-lg-8">
                             <div class="mb-4">
                                 <div class="text-ci-dark font-weight-bold">
                                     資優級會員 王小喬
@@ -293,11 +293,11 @@
                                             <div class="lead mt-2">平衡控油精華露(200ml)</div>
                                         </div>
                                         <p>日常保養<br>調理肌膚 清爽控油 緊緻毛孔</p>
-                                        <p>
+                                        <p class="mb-2">
                                             <span class="h4 text-primary font-weight-normal">NT$690</span>
                                             <span class="text-sm">紅利點數3點</span>
                                         </p>
-                                        <div class="text-right">
+                                        <div class="text-left text-lg-right">
                                             <a class="btn btn-primary py-0" href="member-gift-detail.html">了解更多</a>
                                         </div>
                                     </div>
@@ -314,11 +314,11 @@
                                             <div class="lead mt-2">平衡控油精華露(200ml)</div>
                                         </div>
                                         <p>加強修護<br>高效控油 去除老廢角質</p>
-                                        <p>
+                                        <p class="mb-2">
                                             <span class="h4 text-primary font-weight-normal">NT$690</span>
                                             <span class="text-sm">紅利點數3點</span>
                                         </p>
-                                        <div class="text-right">
+                                        <div class="text-left text-lg-right">
                                             <a class="btn btn-primary py-0" href="member-gift-detail.html">了解更多</a>
                                         </div>
                                     </div>
