--- a/pw-new-step1.html
+++ b/pw-new-step1.html
@@ -171,7 +171,7 @@
                 </ol>
             </nav>
         </div>
-        <div class="container py-4 py-lg-9">
+        <div class="container pb-4 pb-lg-9">
             <div class="step mb-8">
                 <div class="step-circle active">
                     <span class="step-label">1</span>
