--- a/member-point.html
+++ b/member-point.html
@@ -209,7 +209,7 @@
                         請於下方欄位輸入積點序號及相關資訊<br>
                         可單筆或多筆輸入序號，點選送出後即完成積點！
                     </p>
-                    <form class="mt-10">
+                    <form class="mt-5 mt-lg-10">
                         <div class="form-group row">
                             <label for="inputPurchase" class="col-sm-2 col-form-label">購買通路</label>
                             <div class="col-sm-10">
