--- a/module/member-info.html
+++ b/module/member-info.html
@@ -18,7 +18,8 @@
                             <div class="col-12 col-md-8 my-2 my-md-0">
                                 <div class="text-left">
                                     即將到期點數：<span class="h5">1</span> 點 (2019/9/30到期)<br>
-                                    生日加倍點數：<span class="h5">5</span> 點 (2020/2/27即將匯入)
+                                    生日加倍點數：<span class="h5">5</span> 點 (2020/2/27即將匯入)<br>
+                                    免費領取試用品：<span class="h5">1</span> 次 (已領取0次)
                                 </div>
                             </div>
                             <div class="col-12 col-md-4">
