--- a/member-point.html
+++ b/member-point.html
@@ -60,7 +60,7 @@
                     <a class="nav-link" href="notice.html">注意事項</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">常見問題</a>
+                    <a class="nav-link" href="faq.html">常見問題</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">我的帳戶</a>
@@ -137,7 +137,7 @@
                                 <a class="nav-link" href="notice.html">注意事項</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">常見問題</a>
+                                <a class="nav-link" href="faq.html">常見問題</a>
                             </li>
                         </ul>
                     </div>
